--- a/client/src/components/atomic/templates/Header/Header.css
+++ b/client/src/components/atomic/templates/Header/Header.css
@@ -1,3 +1,10 @@
+.header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
 .header-top{
     display: flex;
     align-items: center;
@@ -7,27 +14,31 @@
     color: white;
 }
 
+.header-bottom-block{
+    width: 100%;
+    background-color: white;
+}
+
 .header-bottom{
     width: 95%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 150px;
+    height: 100px;
+    background-color: white;
 }
 
 .right-elements-block{
     display: flex;
     justify-content: space-between;
     width: 500px;
-    margin-bottom: 50px;
 }
 
 .left-elements-block {
     display: flex;
     justify-content: space-between;
     width: 500px;
-    margin-bottom: 50px;
 }
 
 .search-block{
