--- a/client/src/components/atomic/atoms/Header/RightHeaderImg/RightHeaderImg.css
+++ b/client/src/components/atomic/atoms/Header/RightHeaderImg/RightHeaderImg.css
@@ -2,4 +2,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+}    
+
+.right-header-img img{
+    width: 20px;
+    height: 18px;
 }
