--- a/client/src/components/atomic/molecules/ColorList/ColorList.css
+++ b/client/src/components/atomic/molecules/ColorList/ColorList.css
@@ -1,5 +1,8 @@
 .color-list{
     display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-top: 21px;
 }
 .inactive {
     opacity: 0.5; /* Делает элемент полупрозрачным */
