--- a/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
+++ b/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
@@ -1,5 +1,86 @@
-.carousel-list-block{
-    height: 450px;
-    width: 100%;
-    background-color: rgb(187, 189, 184);
+.carousel-list-block {
+  height: 450px;
+  width: 100%;
+  background-color: rgb(187, 189, 184);
+  overflow-x: hidden;
 }
+
+.main-container {
+  width: 95%;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+.carousel-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+}
+
+.carousel-wrapper {
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  display: flex;
+  width: 100%;
+  padding: 20px 0;
+  overflow-x: hidden;
+}
+
+.carousel-content {
+  display: flex;
+  gap:45px;
+}
+
+.product-item {}
+
+.product-item.main-page {
+  width: 420px;
+  height: 645px;
+  position: relative;
+  margin-left: 24px;
+  margin-top: 0;
+  background: #fff;
+  border-radius: 10px;
+}
+
+.carousel-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  font-size: 18px;
+  line-height: 40px;
+}
+
+.carousel-btn.left {
+  left: 10px;
+}
+
+.carousel-btn.right {
+  right: 10px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 30px;
+}
+
