--- a/client/src/components/atomic/templates/productList/productList.css
+++ b/client/src/components/atomic/templates/productList/productList.css
@@ -32,3 +32,11 @@ a{
     display: flex;
     justify-content: space-between;
 }
+
+.recently-viewed-container{
+    width: 95%;
+}
+
+.recently-viewed-container .main-container{
+    width: auto;
+}
