--- a/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
+++ b/client/src/components/atomic/templates/CarouselListByTypes/CarouselListByTypes.css
@@ -6,7 +6,7 @@
 }
 
 .main-container {
-  width: 95%;
+  padding: 0px 0 30px 0;
   margin: 0 auto;
   overflow-x: hidden;
 }
@@ -35,8 +35,8 @@
 .product-item {}
 
 .product-item.main-page {
+  
   width: 420px;
-  height: 645px;
   position: relative;
   margin-left: 24px;
   margin-top: 0;
@@ -81,6 +81,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 30px;
+
 }
 
+.main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page {
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page .color-list .colors-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start; /* Или space-between */
+  gap: 10px; /* Одинаковое расстояние между элементами */
+}
+
+
+.main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page .color-list .colors-container .color-circle{
+
+  margin: 0;
+}
