--- a/client/src/components/atomic/templates/productList/productList.css
+++ b/client/src/components/atomic/templates/productList/productList.css
@@ -11,8 +11,8 @@ a{
 
 .product-list{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    justify-content: start; /* Или space-between */
     padding: 0;
     margin: 0;
 }
@@ -34,9 +34,24 @@ a{
 }
 
 .recently-viewed-container{
-    width: 95%;
+    margin: 0 auto;
 }
 
 .recently-viewed-container .main-container{
     width: auto;
+}
+
+.product-list-block .catalog-container .product-list .product-item-li .product-item .color-list .colors-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start; /* Или space-between */
+    gap: 10px; /* Одинаковое расстояние между элементами */
+  }
+  
+
+.product-list-block .catalog-container .product-list .product-item-li .product-item .color-list .colors-container .color-circle{
+    width: 33px;
+    height: 33px;
+    margin: 0;
+    
 }
