--- a/client/src/components/pages/cartPage/Cart.css
+++ b/client/src/components/pages/cartPage/Cart.css
@@ -1,28 +1,4 @@
-.modal-content .product-image {
-    width: max-content;
-}
 
-.modal-content .product-image img {
-    width: 120px;
-    height: 170px;
-}
-
-.cart-list {
-    list-style-type: none;
-    height: 380px;
-    overflow-y: auto;
-}
-
-.cart-list li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 30px;
-}
-
-.cart-list li:first-child {
-    margin-top: 0;
-}
 
 .cart-title {
     margin-bottom: 30px;
@@ -39,4 +15,21 @@
 
 .cart-item-cost{
     font-size: 18px;
+}
+
+.cart-bottom-buttons{
+    margin-top: 20px;
+    display: flex;
+    justify-content: end;
+}
+
+.cart-bottom-buttons a .cart-button{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    margin-left: 30px;
+}
+
+.promocode-form-block .cart-button{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
