--- a/client/src/components/atomic/atoms/Footer/FooterElementText/FooterElementText.css
+++ b/client/src/components/atomic/atoms/Footer/FooterElementText/FooterElementText.css
@@ -3,3 +3,9 @@
     font-family: 'Helvetica Neue Cyr Ultra Light';
     color: white;
 }
+
+@media (max-width: 768px) {
+    .footer-element-text{
+        font-size: 15px;
+    }
+}
