--- a/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
@@ -18,4 +18,15 @@
     filter: invert(38%) sepia(80%) saturate(2183%) hue-rotate(330deg) brightness(95%) contrast(106%);
     fill: red;
   }
+
+  @media (max-width:768px) {
+    .heart-container{
+      top: 6px;
+      right: 6px;
+    }
+    .heart-container img{
+      width: 15px;
+      height: 15px;
+    }
+  }
   
