--- a/client/src/common/Modal.css
+++ b/client/src/common/Modal.css
@@ -29,3 +29,14 @@
   font-size: 18px;
   cursor: pointer;
 }
+
+@media (max-width:768px) {
+  .modal-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
