--- a/client/src/components/atomic/atoms/Cart/TotalCost/TotalCost.css
+++ b/client/src/components/atomic/atoms/Cart/TotalCost/TotalCost.css
@@ -1,4 +1,4 @@
-.total-price-block{
+.total-price-block {
     display: flex;
     justify-content: end;
     align-items: center;
@@ -6,6 +6,13 @@
     margin-top: 20px;
 }
 
-.total-price{
+.total-price {
     margin-left: 30px;
+}
+
+@media (max-width:768px) {
+    .total-price-block{
+        justify-content: space-between;
+        font-size: 15px;
+    }
 }
