--- a/client/src/components/atomic/atoms/Footer/FooterElementImg/FooterElementImg.css
+++ b/client/src/components/atomic/atoms/Footer/FooterElementImg/FooterElementImg.css
@@ -2,3 +2,10 @@
     width: 30px;
     height: 30px;
 }
+
+@media (max-width: 768px) {
+    .footer-element-img img{
+        width: 15px;
+        height: 15px;
+    }
+}
