--- a/client/src/components/atomic/atoms/Header/RightHeaderImg/RightHeaderImg.css
+++ b/client/src/components/atomic/atoms/Header/RightHeaderImg/RightHeaderImg.css
@@ -10,3 +10,10 @@
     height: 18px;
     cursor: pointer;
 }
+
+@media (max-width:768px) {
+    .right-header-img img{
+        width: 15px;
+        height: 13px;
+    }
+}
