--- a/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
+++ b/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
@@ -3,3 +3,10 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 768px) {
+    .search-loupe img{
+        width: 20px;
+        height: 20px;
+    }
+}
