--- a/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
@@ -6,6 +6,7 @@
     cursor: pointer;
     border: 1px solid #ccc;
     transition: transform 0.2s ease;
+    position: relative; /* Для размещения внутреннего круга */
 }
 
 .color-circle:first-child {
@@ -13,8 +14,21 @@
 }
 
 .color-circle.active {
-    border: 2px solid #000; /* Change to a color to highlight */
-    transform: scale(1.1); /* Slightly enlarge to indicate selection */
+    border: 2px solid #000; /* Подчеркиваем активный цвет */
+    transform: scale(1.1); /* Увеличиваем размер */
+}
+
+.color-circle.active::before {
+    content: ''; /* Создаем внутренний круг */
+    position: absolute;
+    width: 60%; /* Размер внутреннего круга */
+    height: 60%;
+    background-color: inherit; /* Совпадает с фоном основного круга */
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2; /* Поверх обводки */
 }
 
 .availability-text {
@@ -25,3 +39,30 @@
     color: green;
 }
 
+.isNotAvailability {
+    position: relative;
+    opacity: 0.5; /* Полупрозрачность */
+    cursor: not-allowed; /* Указываем, что элемент недоступен */
+}
+
+.isNotAvailability::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: red;
+    transform: rotate(-45deg);
+    transform-origin: center;
+}
+
+@media (max-width:768px) {
+    .color-circle{
+        width: 15px;
+        height: 15px;
+    }
+    .color-list{
+        margin-top: 6px;
+    }
+}
