--- a/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
+++ b/client/src/components/atomic/molecules/PromocodeForm/PromocodeForm.css
@@ -5,3 +5,15 @@
     margin-top: 20px;
     font-size: 21px;
 }
+
+@media (max-width:768px) {
+    .promo-head{
+        display: none;
+    }
+    .promocode-form .cart-button{
+        width: 115px;
+        font-size: 12px;
+        height: 30px;
+        padding: 6px;
+    }
+}
