--- a/client/src/components/atomic/organisms/ClientLoginForm/ClientLoginForm.css
+++ b/client/src/components/atomic/organisms/ClientLoginForm/ClientLoginForm.css
@@ -15,3 +15,17 @@
 .login-form-info{
     margin-top: 60px;
 }
+
+@media (max-width:768px) {
+    .login-form-modal .modal-overlay .modal-content{
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .login-form-head{
+        font-size: 18px;
+        width: 100%;
+    }
+}
