--- a/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
+++ b/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
 }
 
-.register-order-products-block{
+.register-order-products-block {
     border-left: 2px solid;
     padding: 0 30px 0 30px;
     width: 44%;
@@ -27,42 +27,87 @@
     display: none;
 }
 
-.register-order-products-block .cart-list .cart-item .product-image img{
+.register-order-products-block .cart-list .cart-item .product-image img {
     width: 150px;
     height: 200px;
 }
 
-.register-order-products-head{
+.register-order-products-head {
     font-size: 24px;
     margin-bottom: 30px;
 }
 
-.register-order-products-block .cart-button{
+.register-order-products-block .cart-button {
     background-color: black;
     color: white;
     width: 100%;
     margin-top: 55px;
 }
 
-.checkboxes-block{
+.checkboxes-block {
     margin-top: 48px;
 }
 
-.checkbox-block{
+.checkbox-block {
     display: flex;
     align-items: center;
     margin-top: 15px;
 }
 
-.checkbox-block input{
+.checkbox-block input {
     width: 30px;
     height: 30px;
     margin-right: 12px;
 }
 
+.mobile-create-order {
+    display: none;
+}
+
 @media (min-width: 1920px) {
     .register-order-block {
         max-width: calc(1920px + 510px);
-        padding: 0 255px !important;
+        padding: 0 205px !important;
+    }
+}
+
+@media (max-width:1480px) {
+    .register-order-form{
+        width: 550px;
+    }
+    .register-order-form input{
+        width: 250px;
+    }
+    .register-order-form input[type="checkbox"]{
+        width: auto;
+    }
+}
+
+@media (max-width:768px) {
+    .register-order-products-block {
+        display: none;
+    }
+
+    .mobile-create-order {
+        display: block;
+    }
+
+    .mobile-create-order .cart-button {
+        margin-top: 21px;
+        width: 100%;
+        background-color: black;
+        color: white;
+    }
+
+    .checkbox-block {
+        font-size: 12px;
+        margin-top: 21px;
+    }
+
+    .mobile-create-order .total-price-block {
+        font-size: 20px;
+    }
+    .register-order-form{
+        width: 100%;
     }
 }
