--- a/client/src/components/pages/cartPage/Cart.css
+++ b/client/src/components/pages/cartPage/Cart.css
@@ -33,3 +33,39 @@
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
 }
+
+@media (max-width:768px) {
+
+    .cart-product-description{
+        font-size: 12px;
+        width: 90%;
+    }
+
+    .cart-item-cost{
+        margin-top: 15px;
+        margin-left: 20px;
+    }
+
+    .cart-modal-block{
+        display: flex;
+        flex-direction: column;
+        
+        padding: 20px;
+    }
+    .cart-bottom-buttons{
+        display: block;
+    }
+    .cart-bottom-buttons .cart-button{
+        margin-left: 0;
+        width: 100%;
+        font-size: 15px;
+        padding: 7px;
+    }
+    .cart-bottom-buttons a .cart-button{
+        margin-left: 0;
+        width: 100%;
+        margin-top: 9px;
+        font-size: 15px;
+        padding: 7px;
+    }
+}
