--- a/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
+++ b/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
@@ -60,4 +60,7 @@
         border-right: 0;
         border-bottom: 0;  /* Цвет треугольника, совпадает с фоном уведомления */
     }
+    .right-header-el-count{
+        right: -5px;
+    }
 }
