--- a/client/src/components/atomic/molecules/SearchBar/SearchBar.css
+++ b/client/src/components/atomic/molecules/SearchBar/SearchBar.css
@@ -85,3 +85,16 @@
 .item-price{
   margin-top: 5px;
 }
+
+@media (max-width:768px) {
+  .search-results{
+    width: auto;
+    left: -30px;
+  }
+  .search-item .item-title {
+    font-size: 12px;
+  }
+  .search-input{
+    font-size: 8px;
+  }
+}
