--- a/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
+++ b/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
@@ -6,7 +6,8 @@
 
 @media (max-width: 768px) {
     .search-loupe img{
-        width: 20px;
-        height: 20px;
+        display: none;
+        width: 15px;
+        height: 15px;
     }
 }
