--- a/client/src/components/atomic/molecules/UserProfileTabButton/UserProfileTabButton.css
+++ b/client/src/components/atomic/molecules/UserProfileTabButton/UserProfileTabButton.css
@@ -7,7 +7,7 @@
     text-align: left;
     font-size: 18px;
     border-right: 2px solid #8F8D8D;
-    
+    width: 300px;
   }
   
   .tab-button-profile.active {
