--- a/client/src/components/atomic/organisms/ClientLoginForm/ClientLoginForm.css
+++ b/client/src/components/atomic/organisms/ClientLoginForm/ClientLoginForm.css
@@ -1,30 +1,40 @@
-.login-form-head{
+.login-form-head {
     font-size: 27px;
     margin-bottom: 60px;
 }
 
-.login-form-modal .modal-overlay .modal-content{
+.login-form-modal .modal-overlay .modal-content {
     padding: 60px;
 }
 
-.login-form-btns:first-child{
+.login-form-btns:first-child {
     background-color: black;
     color: white;
 }
 
-.login-form-info{
+.login-form-info {
     margin-top: 60px;
 }
 
 @media (max-width:768px) {
-    .login-form-modal .modal-overlay .modal-content{
+    .login-form-modal .modal-overlay .modal-content {
         padding: 20px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .login-form-head{
+
+    .client-reg-form-block,
+    .modal-overlay .modal-content {
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .login-form-head {
         font-size: 18px;
         width: 100%;
     }
