--- a/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
+++ b/client/src/components/atomic/molecules/RightHeaderElement/RightHeaderElement.css
@@ -26,6 +26,7 @@
 
 .right-header-el {
     position: relative;
+    cursor: pointer;
 }
 
 .right-header-el-count {
@@ -40,6 +41,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.right-header-el{
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
