--- a/client/src/components/atomic/atoms/ClientLoginForm/ClientLoginForm.css
+++ b/client/src/components/atomic/atoms/ClientLoginForm/ClientLoginForm.css
@@ -25,10 +25,21 @@
     cursor: pointer;
 }
 
+.login-button:hover{
+    background-color: black;
+    color: white;
+}
+
 .login-button:first-child {
     margin-top: 74px;
     background-color: black;
     color: white;
+}
+
+.login-button:first-child:hover{
+    background-color: white;
+    color: black;
+    border: 2px solid;
 }
 
 @media (max-width:768px) {
