--- a/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Color/Color.css
@@ -52,9 +52,10 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background: red;
+    background: rgb(255, 255, 255);
     transform: rotate(-45deg);
     transform-origin: center;
+    border: 4px #fff;
 }
 
 @media (max-width:768px) {
