--- a/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Image/Image.css
@@ -26,6 +26,30 @@
     }
 }
 
+@media (max-width:1490px) {
+    .product-image img {
+        width: 300px;
+        height: 370px;
+        object-fit: cover;
+    }
+    .product-item{
+        width: 300px;
+    }
+}
+
+@media (max-width:1300px) {
+    .product-image img {
+        width: 250px;
+        height: 310px;
+        object-fit: cover;
+    }
+    .product-item{
+        width: 300px;
+    }
+}
+
+
+
 @media (max-width: 768px) {
     .product-image.main-page img {
         width: 150px;
