--- a/client/src/components/atomic/molecules/QuantitySelector/QuantitySelector.css
+++ b/client/src/components/atomic/molecules/QuantitySelector/QuantitySelector.css
@@ -17,7 +17,7 @@
 @media (max-width: 768px) {
     .product-quantity-selector-container{
         padding: 8px;
-        width: 45%;
+        width: 100px;
         margin-left: 20px;
         margin-top: 10px;
     }
