--- a/client/src/components/atomic/molecules/UserProfileMenu/UserProfileMenu.css
+++ b/client/src/components/atomic/molecules/UserProfileMenu/UserProfileMenu.css
@@ -40,6 +40,7 @@
   .tab-button {
     display: flex;
     align-items: center;
+    justify-content: center;
     background: none;
     border: none;
     cursor: pointer;
