--- a/client/src/components/atomic/templates/OrderList/OrdersList.css
+++ b/client/src/components/atomic/templates/OrderList/OrdersList.css
@@ -145,3 +145,34 @@
     width: 120px;
     height: 150px;
   }
+
+  .order-details-quantity-cost{
+    display: flex;
+    align-items: center;
+  }
+  .order-item-info-block{
+    display: flex;
+    width: 100%;
+  }
+
+  @media (max-width:786px) {
+    .order-info{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .order-item-info-block{
+        display: block;
+    }
+    .order-details-quantity-cost{
+        justify-content: space-between;
+        margin-left: 15px;
+        margin-top: 21px;
+    }
+    .item-details{
+        margin-top: 21px;
+    }
+    .order-total{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+  }
