--- a/client/src/components/atomic/templates/UserProfile/UserProfile.css
+++ b/client/src/components/atomic/templates/UserProfile/UserProfile.css
@@ -27,6 +27,12 @@
     width: 100%;
 }
 
+.tab-content-profile form .cart-button:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid;
+}
+
 .user-profile-delivery-form {
     display: flex;
     flex-direction: column;
@@ -53,7 +59,7 @@
         display: none;
     }
 
-    .menu-content{
+    .menu-content {
         padding: 0;
         margin-top: 12px;
         margin-bottom: 30px;
@@ -77,17 +83,18 @@
         color: white;
     }
 
-    .menu-content .delivery-info-profile-selects .css-b62m3t-container .css-13cymwt-control{
+    .menu-content .delivery-info-profile-selects .css-b62m3t-container .css-13cymwt-control {
         width: auto;
         margin-top: 9px;
     }
-    .menu-content .delivery-info-profile-selects .delivery-info-bottom-select .css-b62m3t-container{
+
+    .menu-content .delivery-info-profile-selects .delivery-info-bottom-select .css-b62m3t-container {
         width: auto;
         margin-top: 9px;
         margin-bottom: 9px;
     }
 
-    .orders-container{
+    .orders-container {
         padding: 0;
     }
 }
