--- a/client/src/components/pages/catalogPage/CatalogPage.css
+++ b/client/src/components/pages/catalogPage/CatalogPage.css
@@ -7,8 +7,7 @@
 }
 
 .product-list-block{
-    width: 90%;
-    margin: 0 0px 0 30px;
+    width: 100%;
 }
 
 .catalog-page-container{
@@ -22,6 +21,7 @@
         margin: 0;
     }
     .filter-block{
+        display: none;
         position: absolute;
         z-index: 1000;
     }
