--- a/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
@@ -16,7 +16,7 @@
   
   .heart-container img.liked {
     filter: invert(38%) sepia(80%) saturate(2183%) hue-rotate(330deg) brightness(95%) contrast(106%);
-    fill: red;
+    fill: none;
   }
 
   @media (max-width:768px) {
