--- a/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
+++ b/client/src/components/atomic/atoms/Header/SearchLoupe/SearchLoupe.css
@@ -1,7 +1,7 @@
 .search-loupe{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: end;
 }
 
 @media (max-width: 768px) {
