--- a/client/src/components/atomic/organisms/CartItems/CartItems.css
+++ b/client/src/components/atomic/organisms/CartItems/CartItems.css
@@ -51,7 +51,7 @@
     }
 }
 
-@media (max-width:1350px) {
+@media (min-width:770px) and (max-width:1350px) {
     .cart-list .cart-item .cart-item-data .cart-product-description{
         font-size: 14px;
     }
