--- a/client/src/components/atomic/templates/Header/Header.css
+++ b/client/src/components/atomic/templates/Header/Header.css
@@ -68,6 +68,11 @@
     animation: cart-bounce 0.5s ease-in-out;
   }
   
+  .wishlist-active {
+    filter: drop-shadow(0 0 4px red); /* Эффект подсветки */
+    fill: red; 
+}
+
 
 @media (max-width: 768px) {
     .header-bottom {
