--- a/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Heart/Heart.css
@@ -12,12 +12,10 @@
 .heart-container img {
     cursor: pointer;
     transition: filter 0.3s;
+    width: 30px;
   }
   
-  .heart-container img.liked {
-    filter: invert(38%) sepia(80%) saturate(2183%) hue-rotate(330deg) brightness(95%) contrast(106%);
-    fill: none;
-  }
+
 
   @media (max-width:768px) {
     .heart-container{
