--- a/client/src/common/Modal.css
+++ b/client/src/common/Modal.css
@@ -35,7 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0;
+    padding: 20px;
     width: 100%;
     height: 100%;
   }
