--- a/client/src/components/atomic/molecules/SearchBar/SearchBar.css
+++ b/client/src/components/atomic/molecules/SearchBar/SearchBar.css
@@ -9,6 +9,7 @@
 .search-input {
   width: 100%;
   padding: 10px 15px;
+  padding-left: 0;
   border: none;
   border-bottom: 2px solid #000000;
   font-size: 16px;
