--- a/client/src/components/atomic/organisms/Wishlist/Wishlist.css
+++ b/client/src/components/atomic/organisms/Wishlist/Wishlist.css
@@ -112,6 +112,7 @@
     .wishlist-btns .cart-button {
         font-size: 10px;
         padding: 6px;
+        border: 2px solid;
     }
 
     .wish-item-data .availability-text{
