--- a/client/src/common/HotStripDiscount/HotStripDiscount.css
+++ b/client/src/common/HotStripDiscount/HotStripDiscount.css
@@ -45,6 +45,7 @@
   min-width: 100%;
 }
 .item {
+  font-family: 'Helvetica Neue Cyr Ultra Light';
   background: #ffffff;
   padding: 8px;
   flex: 0 0 auto;
