--- a/client/src/common/Modal.css
+++ b/client/src/common/Modal.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  border-radius: 0;
 }
 
 .modal-content {
@@ -18,6 +19,7 @@
   position: relative;
   width: 855px;
   height: 710px;
+  border-radius: 0;
 }
 
 .modal-close {
