--- a/client/src/components/atomic/atoms/Header/Logo/Logo.css
+++ b/client/src/components/atomic/atoms/Header/Logo/Logo.css
@@ -1,11 +1,12 @@
 .logo-img{
-    width: 125px;
+    width: 140px;
     height: 125px;
 }
 
 @media (max-width:768px) {
     .logo-img{
-        width: 70px;
-        height: 70px;
+        width: 90px;
+        height: 90px;
+        margin-top: 10px;
     }
 }
