--- a/client/src/components/atomic/atoms/atomsProduct/Cost/Cost.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Cost/Cost.css
@@ -6,15 +6,15 @@
 
 .cost-block p {
     margin: 0;
-    margin-top: 21px;
+    margin-top: 18px;
 }
 
 .price{
-    font-size: 1.2em;
+    font-size: 25px;
 }
 
 .discount-price{
-    font-size: 0.8em;
+    font-size: 21px;
 }
 
 @media (max-width:768px) {
@@ -27,6 +27,6 @@
     }
 
     .cost-block p{
-        margin-top: 5px;
+        margin-top: 3px;
     }
 }
