--- a/client/src/components/atomic/atoms/atomsProduct/Name/Name.css
+++ b/client/src/components/atomic/atoms/atomsProduct/Name/Name.css
@@ -1,7 +1,8 @@
 .name-block p{
     margin: 0;
-    font-size: 18px;
+    font-size: 21px;
     margin-top: 21px;
+    text-align: left;
 }
 
 @media (max-width:768px) {
