--- a/client/src/components/atomic/molecules/SearchBar/SearchBar.css
+++ b/client/src/components/atomic/molecules/SearchBar/SearchBar.css
@@ -4,22 +4,26 @@
   width: max-content;
   max-width: 400px;
   margin: 0 auto;
+  margin-left: 12px;
 }
 
 .search-input {
   width: 100%;
-  padding: 10px 15px;
+  padding: 10px 15px 2px 15px;
   padding-left: 0;
   border: none;
   border-bottom: 2px solid #000000;
   font-size: 16px;
   outline: none;
   transition: border-color 0.3s ease;
+  border-radius: 0;
 }
 
-.search-input:focus {
-  border-color: #4a90e2;
+.search-input {
+  -webkit-appearance: none;
+  appearance: none;
 }
+
 
 .search-results {
   position: absolute;
@@ -97,5 +101,6 @@
   }
   .search-input{
     font-size: 8px;
+    padding-left: 5px;
   }
 }
