--- a/client/src/components/atomic/organisms/Filter/Filter.css
+++ b/client/src/components/atomic/organisms/Filter/Filter.css
@@ -59,4 +59,6 @@
     background-color: white;
     border: 1px solid #C3C1C1;
     cursor: pointer;
+    border-radius: 4px;
+    color: #000000;
 }
