--- a/client/src/components/atomic/organisms/productItem/ProductItem.css
+++ b/client/src/components/atomic/organisms/productItem/ProductItem.css
@@ -28,7 +28,7 @@
 .product-page-container {
     width: 90%;
     margin: 0 auto;
-    margin-top: 120px;
+    margin-top: 190px;
 }
 
 .product-page-data-block {
@@ -44,6 +44,7 @@
 
 .product-page-data-block .product-item .cost-addBtn .cost-block .price {
     font-size: 27px;
+    margin-top: 21px;
 }
 
 .product-page-data-block .product-item .cost-addBtn .cost-block .discount-price {
@@ -52,6 +53,7 @@
 
 .product-page-data-block .product-item .name-heart .name-block p {
     font-size: 27px;
+    margin-top: 0;
 }
 
 .product-page-data-block .product-item .cost-article {
@@ -110,6 +112,17 @@
 }
 
 @media (max-width: 768px) {
+
+    .product-page-container{
+        margin-top: 120px;
+    }
+
+    .product-item-view-head{
+        font-size: 13px;
+        margin-bottom: 7px;
+        margin-left: 7px;
+    }
+
     .product-item {
         width: 150px;
         margin-left: 0;
@@ -143,10 +156,15 @@
 
     .product-page-data-block .product-item .cost-addBtn .cost-block {
         margin-top: 12px;
+        align-items: center;
+    }
+
+    .product-page-data-block .product-item .cost-addBtn .cost-block .price{
+        margin-top: 0;
     }
 
     .product-page-data-block .product-item .color-list {
-        margin-top: 12px;
+        margin-top: 18px;
     }
 
     .product-page-data-block .product-item .colors-container {
@@ -163,14 +181,27 @@
     }
 
     .product-page-data-block .product-item .size-list .size-button {
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         font-size: 12px;
         margin-left: 0;
         margin-right: 10px;
+        padding: inherit;
     }
 
     .recently-viewed-container .main-container .mySwiper .swiper-wrapper .swiper-slide .product-item.main-page{
         width: auto;
+    }
+
+    .product-page-data-block .product-item .name-heart{
+        margin-top: 15px;
+    }
+
+    .product-page-data-block .product-item .name-heart .name-block p{
+        font-size: 18px;
+    }
+
+    .tab-menu-block{
+        margin-top: 30px;
     }
 }
