--- a/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
+++ b/client/src/components/atomic/templates/RegisterOrder/RegisterOrder.css
@@ -85,7 +85,7 @@
         width: 250px;
     }
     .register-order-form input[type="checkbox"]{
-        width: auto;
+        width: 24px;
     }
 }
 
