--- a/client/src/components/pages/cartPage/Cart.css
+++ b/client/src/components/pages/cartPage/Cart.css
@@ -72,6 +72,7 @@
         width: 100%;
         font-size: 15px;
         padding: 7px;
+        border: 2px solid;
     }
     .cart-bottom-buttons a .cart-button{
         margin-left: 0;
