--- a/client/src/components/pages/catalogPage/CatalogPage.css
+++ b/client/src/components/pages/catalogPage/CatalogPage.css
@@ -17,7 +17,7 @@
 
 @media (max-width:768px) {
     .product-list-block{
-        width: auto;
+        width: 100%;
         margin: 0;
     }
     .filter-block{
